--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "redux-thunk": "^2.2.0",
     "underwater": "^1.1.0"
   },
+   "engines": {
+    "node": "8.12.0",
+    "npm": "6.4.1"
+  },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
