--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "redux-localstorage": "^0.4.1",
     "redux-storage": "^4.1.2",
     "redux-thunk": "^2.2.0",
-    "underwater": "^1.1.0"
+    "underwater": "^1.1.0",
+    "terser": "3.14.1"
   },
    "engines": {
     "node": "8.12.0",
