--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "terser": "3.14.1"
   },
    "engines": {
-    "node": "8.12.0",
+    "node": ">= 12",
     "npm": "6.4.1"
   },
   "scripts": {
