--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://ahmdfajri14.github.io/pokedex",
   "name": "pokedex",
   "version": "0.1.0",
   "private": true,
@@ -23,7 +24,7 @@
     "underwater": "^1.1.0",
     "terser": "3.14.1"
   },
-   "engines": {
+  "engines": {
     "node": "8.12.0",
     "npm": "6.4.1"
   },
@@ -46,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
